--- a/index.html
+++ b/index.html
@@ -51,26 +51,6 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-md-12 nopadding black blueborder">
-                            <div class="gallery">
-                                <div>
-                                    <img src="./images/gallery1.jpg" class="gallery-item" alt="1">
-                                </div>
-                                <div>
-                                    <img src="./images/gallery2.jpg" class="gallery-item" alt="1">
-                                </div>
-                                <div>
-                                    <img src="./images/gallery3.jpg" class="gallery-item" alt="1">
-                                </div>
-                                <div>
-                                    <img src="./images/gallery4.jpg" class="gallery-item" alt="1">
-                                </div>
-                                <div>
-                                    <img src="./images/gallery5.jpg" class="gallery-item" alt="1">
-                                </div>
-                                <div>
-                                    <img src="./images/gallery6.jpg" class="gallery-item" alt="1">
-                                </div>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -88,14 +68,17 @@
                 <!--Auto parts-->
                 <div class="container">
                     <div class="row">
-                        <div class="col-md-6">
+                        <div class="col-xl-4">
                             <div class="auto-parts white flex column vertical">
                                 <div class="auto-box vertical flex column">
-                                    <img class="parts-image" src="images/part1.png" alt="1">
-                                    <h3 class="text-align">1</h3>
-                                    <p class="p-auto">1</p>
-                                    <a href="#">1</a>
+                                    <a href="#">
+                                        <img class="parts-image" src="img/prod1.png" alt="1">
+                                    </a>
                                 </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-4">
+                            <div class="auto-parts white flex column vertical">
                                 <div class="auto-box vertical flex column">
                                     <img class="parts-image" src="images/part2.png" alt="2">
                                     <h3 class="text-align">2</h3>
@@ -104,19 +87,13 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-6">
+                        <div class="col-xl-4">
                             <div class="auto-parts white flex column vertical">
                                 <div class="auto-box vertical flex column">
                                     <img class="parts-image" src="images/part3.png" alt="3">
                                     <h3 class="text-align">3</h3>
                                     <p class="p-auto">3</p>
                                     <a href="#">3</a>
-                                </div>
-                                <div class="auto-box vertical flex column">
-                                    <img class="parts-image" src="images/part4.png" alt="4">
-                                    <h3 class="text-align">4</h3>
-                                    <p class="p-auto">4</p>
-                                    <a href="#">4</a>
                                 </div>
                             </div>
                         </div>
@@ -125,9 +102,9 @@
             </div>
             <div>
                 <!--Info boxes-->
-                <div class="container">
+                <!-- <div class="container">
                     <div class="row spacing">
-                        <div class="col-md-4">
+                        <div class="col-xl-4">
                             <div class="info-section">
                                 <div class="info-box">
                                     <h4>1</h4>
@@ -137,7 +114,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-xl-4">
                             <div class="info-section">
                                 <div class="info-box">
                                     <h4>2</h4>
@@ -146,7 +123,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-xl-4">
                             <div class="info-section">
                                 <div class="info-box">
                                     <h4>3</h4>
@@ -157,7 +134,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
 
         </main>  
@@ -199,9 +176,9 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="text-area vertical flex column">
-                            <h4 class="question-h4 bottom-border">Message</h4>   
-                                <textarea placeholder="Enter your text..."></textarea>
-                                <a class="button form-margin" href="#">SUBMIT</a>
+                            <h4 class="bottom-border">Message</h4>   
+                            <textarea placeholder="Enter your text..."></textarea>
+                            <a class="button form-margin" href="#">SUBMIT</a>
                         </div>
                     </div>
                 </div>
@@ -209,21 +186,20 @@
         </div>
 
          <!--Footer links-->
-        <div class="footer-wrapper-xl flex column black">
+        <div class="footer-wrapper-xl flex column darkblue">
             <!--Footer material icons-->
-            <footer class="flex padding horizontal black space-around">
-                <span class="material-icons bottom-icon" style="color: white;">facebook</span>
-                <span class="Rspan" style="color: red;">|</span>
-                <a href="contact.html">
-                    <span class="material-icons bottom-icon middle" style="color: white;">email</span>
-                </a>
-                <span class="Rspan" style="color: red;">|</span>
-                <span class="material-icons bottom-icon" style="color: white;">print</span>
+            <footer class="flex padding darkblue space-around">
+                <span class="material-icons bottom-icon margin05" style="color: white;">facebook</span>
+                <span class="material-icons bottom-icon margin05" style="color: white;">print</span>
+                <!-- <span class="Rspan" style="color: red;">|</span> -->
+                    <span class="material-icons bottom-icon margin05" style="color: white;">email</span>
+                <!-- <span class="Rspan" style="color: red;">|</span> -->
+                <!-- <span class="material-icons bottom-icon" style="color: white;">print</span> -->
             </footer>
         </div>
         
         <!--Copyright-->
-        <div class="flex horizontal column padding black">
+        <div class="flex horizontal column padding darkblue">
             <span class="copyright">© 2021 Skyline</span>
         </div>
 
