--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Skyline</title>
     <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> 
     <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <!-- CSS -->
@@ -20,13 +22,16 @@
                 <a href="index.html">
                     <p style="margin-left: 1rem;">SKYLINE</p>
                     <!-- <img src="images/logo.svg" alt="Logo" class="logo"> -->
-                </a>                    
-                <!-- <span class = "material-icons top-icon" style="color: rgb(0, 0, 0);">view_headline</span> -->
+                </a>
+                <div class=".d-block .d-sm-none">
+                    <span class="material-icons bottom-icon margin05 .d-block .d-sm-none" style="color: rgb(0, 0, 0);">menu</span>
+
+                </div>                    
                 <ul class="flex flex-row nav-ul">
                     <!-- <li><a href="index.html" class="a-top">HOME</li> -->
-                    <li><a href="#" class="a-top">PRODUCTS</a></li>
-                    <!-- <li><a href="contact.html" class="a-top">CONTACT</a></li> -->
-                    <li><a href="#" class="a-top">CONTACT</a></li>
+                        <li><span class="material-icons top-icon" style="color: rgb(0, 0, 0);">view_headline</span></li>                            
+                        <li><a href="#" class="a-top">PRODUCTS</a></li>
+                        <li><a href="#" class="a-top">CONTACT</a></li>
                 </ul>
             </nav>
 
@@ -167,7 +172,7 @@
                             <p class="p-form">Palo Alto, USA</p>
                             <p class="p-form">Unit 1, Sesame Street</p>
                             <a href="#"><p class="p-form"  style="text-decoration: underline; color: rgb(21, 83, 255)">info@skyline.com</p></a>
-                            <p class="p-form">(555)PLEASE-CALL-US</p>
+                            <p class="p-form">(555)CALL-US</p>
                         </div>
                     </div>
                     </div>
