--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
     <body>
-        <header style="height: 600px">
+        <header>
             <!--Nav menu-->
-            <nav class="flex padding vertical" style="height: 6rem">
+            <nav class="flex padding vertical" style="height: 100px">
                 <a href="index.html">
-                    <p style="margin-left: 1rem;">SKYLINE</p>
+                    <p style="margin-left: 1rem;">SYMBOL</p>
                     <!-- <img src="images/logo.svg" alt="Logo" class="logo"> -->
                 </a>
                 <div class=".d-block .d-sm-none">
@@ -44,7 +44,7 @@
         <main>
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md-12" style="height: 400px;">
                         <div class="flex column vertical spacing">
                             <h1 class="flex h1-services grayborder">SKYLINE</h1>
                         </div>
@@ -60,7 +60,45 @@
                     </div>
                 </div>
             </div>
-            <div>
+                <!--Info boxes-->
+                <div class="container">
+                    <div class="row spacing">
+                        <div class="col-sm-12">
+                            <div class="info-section">
+                                <div class="info-box">
+                                    <div class="flex column vertical">
+                                        <h3 class="flex margin2 h1-services grayborder">Information</h3>
+                                    </div>
+                                    <!-- <h4>1</h4> -->
+                                    <p class="p-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. In fuga quia doloremque sed itaque a veritatis harum ipsa, atque debitis ex ducimus fugit voluptatem natus molestias commodi? Ut, iste minima.</p>
+                                    <p class="p-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quae excepturi omnis assumenda animi nam dolore, deleniti cupiditate ab perferendis praesentium? Beatae provident aut, possimus dicta earum nisi nemo iure!</p>
+                                    <p class="p-info">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis repellat at quibusdam placeat eveniet suscipit dolorem ea, fuga deleniti molestiae esse atque tempora cum consectetur sapiente, dolorum quidem adipisci error?</a>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- <div class="col-xl-4">
+                            <div class="info-section">
+                                <div class="info-box">
+                                    <h4>2</h4>
+                                    <p class="p-info">1</p>
+                                    <p class="p-info">2</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-4">
+                            <div class="info-section">
+                                <div class="info-box">
+                                    <h4>3</h4>
+                                    <p class="p-info">1</p>
+                                    <p class="p-info">2</p>
+                                    <a href="#">3</a>
+                                </div>
+                            </div>
+                        </div> -->
+                    </div>
+                </div>
+                <div class="col-md-12 nopadding black blueborder">
+                </div>
                 <div class="container">
                     <div class="row">
                         <div class="col-md-12">
@@ -106,40 +144,6 @@
                 </div>
             </div>
             <div>
-                <!--Info boxes-->
-                <!-- <div class="container">
-                    <div class="row spacing">
-                        <div class="col-xl-4">
-                            <div class="info-section">
-                                <div class="info-box">
-                                    <h4>1</h4>
-                                    <p class="p-info">1</p>
-                                    <p class="p-info">2</p>
-                                    <a href="#">3</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-4">
-                            <div class="info-section">
-                                <div class="info-box">
-                                    <h4>2</h4>
-                                    <p class="p-info">1</p>
-                                    <p class="p-info">2</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-4">
-                            <div class="info-section">
-                                <div class="info-box">
-                                    <h4>3</h4>
-                                    <p class="p-info">1</p>
-                                    <p class="p-info">2</p>
-                                    <a href="#">3</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
             </div>
 
         </main>  
@@ -195,9 +199,9 @@
             <!--Footer material icons-->
             <footer class="flex padding darkblue space-around">
                 <span class="material-icons bottom-icon margin05" style="color: white;">facebook</span>
-                <span class="material-icons bottom-icon margin05" style="color: white;">print</span>
+                <span class="material-icons bottom-icon margin05" style="color: white;">email</span>
+                <span class="material-icons bottom-icon margin05" style="color: white;">phone</span>
                 <!-- <span class="Rspan" style="color: red;">|</span> -->
-                    <span class="material-icons bottom-icon margin05" style="color: white;">email</span>
                 <!-- <span class="Rspan" style="color: red;">|</span> -->
                 <!-- <span class="material-icons bottom-icon" style="color: white;">print</span> -->
             </footer>
