--- a/index.html
+++ b/index.html
@@ -20,19 +20,17 @@
             <!--Nav menu-->
             <nav class="flex padding vertical" style="height: 100px">
                 <a href="index.html">
-                    <p style="margin-left: 1rem;">SYMBOL</p>
-                    <!-- <img src="images/logo.svg" alt="Logo" class="logo"> -->
-                </a>
-                <div class=".d-block .d-sm-none">
-                    <span class="material-icons bottom-icon margin05 .d-block .d-sm-none" style="color: rgb(0, 0, 0);">menu</span>
-
-                </div>                    
+                    <!-- <p style="margin-left: 1rem;">SYMBOL</p> -->
+                    <img src="assets/symbol.png" alt="Symbol" style="width: 4rem;">
+                </a>               
                 <ul class="flex flex-row nav-ul">
                     <!-- <li><a href="index.html" class="a-top">HOME</li> -->
                         <li><span class="material-icons top-icon" style="color: rgb(0, 0, 0);">view_headline</span></li>                            
-                        <li><a href="#" class="a-top">PRODUCTS</a></li>
-                        <li><a href="#" class="a-top">CONTACT</a></li>
-                </ul>
+                        <li><a href="#info" class="a-top">INFO</a></li>
+                        <li><a href="#products" class="a-top">PRODUCTS</a></li>
+                        <li><a href="#contact" class="a-top">CONTACT</a></li>
+                    </ul>
+                    <span class="material-icons bottom-icon margin05 .d-block .d-sm-none" style="color: rgb(0, 0, 0);">menu</span>
             </nav>
 
                 </div>
@@ -67,7 +65,7 @@
                             <div class="info-section">
                                 <div class="info-box">
                                     <div class="flex column vertical">
-                                        <h3 class="flex margin2 h1-services grayborder">Information</h3>
+                                        <h3 class="flex margin2 h1-services grayborder" id="info">Information</h3>
                                     </div>
                                     <!-- <h4>1</h4> -->
                                     <p class="p-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. In fuga quia doloremque sed itaque a veritatis harum ipsa, atque debitis ex ducimus fugit voluptatem natus molestias commodi? Ut, iste minima.</p>
@@ -103,7 +101,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="flex column vertical">
-                                <h3 class="flex margin2 h1-services grayborder">Products</h3>
+                                <h3 class="flex margin2 h1-services grayborder" id="products">Products</h3>
                             </div>
                         </div>
                     </div>
@@ -112,33 +110,37 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-4">
-                            <div class="auto-parts white flex column vertical">
-                                <div class="auto-box vertical flex column">
-                                    <a href="#">
-                                        <img class="parts-image" src="img/prod1.png" alt="1">
-                                    </a>
+                            <a href="#">
+                                <div class="auto-parts white flex column vertical">
+                                    <div class="auto-box vertical flex column">
+                                        <img class="parts-image" src="assets/clipboard.png" alt="Clipboard">
+                                        <h3 class="text-align">Clipboard</h3>
+                                        <p class="p-auto">800:-</p>
+                                    </div>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                         <div class="col-xl-4">
-                            <div class="auto-parts white flex column vertical">
-                                <div class="auto-box vertical flex column">
-                                    <img class="parts-image" src="images/part2.png" alt="2">
-                                    <h3 class="text-align">2</h3>
-                                    <p class="p-auto">2</p>
-                                    <a href="#">2</a>
+                            <a href="#">
+                                <div class="auto-parts white flex column vertical">
+                                    <div class="auto-box vertical flex column">
+                                        <img class="parts-image" src="assets/card.png" alt="Card">
+                                        <h3 class="text-align">Card</h3>
+                                        <p class="p-auto">2000:-</p>
+                                    </div>
                                 </div>
-                            </div>
+                            </a>
                         </div>
                         <div class="col-xl-4">
+                            <a href="#">
                             <div class="auto-parts white flex column vertical">
                                 <div class="auto-box vertical flex column">
-                                    <img class="parts-image" src="images/part3.png" alt="3">
-                                    <h3 class="text-align">3</h3>
-                                    <p class="p-auto">3</p>
-                                    <a href="#">3</a>
+                                    <img class="parts-image" src="assets/bag.png" alt="Bag">
+                                    <h3 class="text-align">Bag</h3>
+                                    <p class="p-auto">500:-</p>
                                 </div>
                             </div>
+                        </a>
                         </div>
                     </div>
                 </div>
@@ -154,7 +156,7 @@
                     <div class="col-md-6 order-md-1 order-2">
                         <div class="flex-form">
                             <form action="#" class="flex column right form-margin box-padding" method="post">
-                                <h2 class="contact-h2 bottom-border">Contact</h2>
+                                <h2 class="contact-h2 bottom-border" id="contact">Contact</h2>
                                 <div class="flex-row">
                                     <label for="text" class="font">*</label>
                                     <input type="text" id="text" required placeholder="Name">
@@ -173,8 +175,8 @@
                     <div class="col-md-6 order-md-2 order-1">
                         <div class="contact-form box-padding">
                             <h5 class="p-form">Skyline</h5>
-                            <p class="p-form">Palo Alto, USA</p>
-                            <p class="p-form">Unit 1, Sesame Street</p>
+                            <p class="p-form">Palo Alto, CA</p>
+                            <p class="p-form">Unit 1, Addison Ave</p>
                             <a href="#"><p class="p-form"  style="text-decoration: underline; color: rgb(21, 83, 255)">info@skyline.com</p></a>
                             <p class="p-form">(555)CALL-US</p>
                         </div>
