--- a/index.html
+++ b/index.html
@@ -31,20 +31,20 @@
                         <li><a href="#contact" class="a-top">CONTACT</a></li>
                     </ul>
                     <a href="#">
-                    <span class="material-icons bottom-icon margin05 .d-block .d-sm-none" style="color: rgb(0, 0, 0);">menu</span>
+                        <span class="material-icons bottom-icon margin05 d-block d-sm-none " style="color: rgb(0, 0, 0);">menu</span>
                     </a>
             </nav>
 
                 </div>
             </div>
-            <div class="bottom-bar black"></div>
+            <div class="bottom-bar"></div>
         </header>
 
         <!--Main Section-->
         <main>
             <div class="container">
                 <div class="row">
-                    <div class="col-md-12" style="height: 400px;">
+                    <div class="col-md-12 " style="height: 400px;">
                         <div class="flex column vertical spacing">
                             <img src="assets/logo.png" alt="Symbol" style="width: 20rem;">
                             <!-- <h1 class="flex h1-services grayborder">SKYLINE</h1> -->
@@ -71,9 +71,8 @@
                                         <h3 class="flex margin2 h1-services grayborder" id="info" style="margin-top: 5rem">Information</h3>
                                     </div>
                                     <!-- <h4>1</h4> -->
-                                    <p class="p-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. In fuga quia doloremque sed itaque a veritatis harum ipsa, atque debitis ex ducimus fugit voluptatem natus molestias commodi? Ut, iste minima.</p>
-                                    <p class="p-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maiores quae excepturi omnis assumenda animi nam dolore, deleniti cupiditate ab perferendis praesentium? Beatae provident aut, possimus dicta earum nisi nemo iure!</p>
-                                    <p class="p-info">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quis repellat at quibusdam placeat eveniet suscipit dolorem ea, fuga deleniti molestiae esse atque tempora cum consectetur sapiente, dolorum quidem adipisci error?</a>
+                                    <p class="p-info">Skyline is engaged in securing growth and revenue from industry sectors characterized by new and rapidly changing technology. Advanced technology has come to be utilized in so many different industries that members of the business community now often regard it as its own unique industry subset, with applications across the spectrum of the world of commerce.</p>
+                                    <p class="p-info">Successful high-tech firms are adept at recognizing the possibilities associated with technological advancements, and nurture corporate cultures that enable them to seize on those opportunities. We utilize education and training opportunities. Entrepreneurial programs have proliferated across the country in recent years, and many of these feature a heavy emphasis on technology.</p>
                                 </div>
                             </div>
                         </div>
