--- a/index.html
+++ b/index.html
@@ -17,14 +17,12 @@
 </head>
     <body>
         <header>
-            <!--Nav menu-->
+            <!-- Header -->
             <nav class="flex padding vertical" style="height: 100px">
                 <a href="index.html">
-                    <!-- <p style="margin-left: 1rem;">SYMBOL</p> -->
                     <img src="assets/symbol.png" alt="Symbol" style="width: 4rem;">
                 </a>               
                 <ul class="flex flex-row nav-ul">
-                    <!-- <li><a href="index.html" class="a-top">HOME</li> -->
                         <li><span class="material-icons top-icon" style="color: rgb(0, 0, 0);">view_headline</span></li>                            
                         <li><a href="#info" class="a-top">INFO</a></li>
                         <li><a href="#products" class="a-top">PRODUCTS</a></li>
@@ -39,21 +37,18 @@
             </div>
             <div class="bottom-bar"></div>
         </header>
-
-        <!--Main Section-->
+        <!-- Main -->
         <main>
             <div class="container">
                 <div class="row">
                     <div class="col-md-12 " style="height: 400px;">
                         <div class="flex column vertical spacing">
-                            <img src="assets/logo.png" alt="Symbol" style="width: 20rem;">
-                            <!-- <h1 class="flex h1-services grayborder">SKYLINE</h1> -->
+                            <img src="assets/logo.png" alt="Symbol" style="width: 20rem; animation: 1s fade-in;">
                         </div>
                     </div>
                 </div>
             </div>
             <div>
-                <!--Grid Gallery-->
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-md-12 nopadding black blueborder">
@@ -61,40 +56,20 @@
                     </div>
                 </div>
             </div>
-                <!--Info boxes-->
-                <div class="container" style="height: 800px" id="info-mq">
-                    <div class="row spacing">
+            <!-- Info -->
+                <div class="container">
+                    <!-- <div class="row spacing"> -->
                         <div class="col-sm-12">
                             <div class="info-section">
                                 <div class="info-box">
                                     <div class="flex column vertical">
                                         <h3 class="flex margin2 h1-services grayborder" id="info" style="margin-top: 5rem">Information</h3>
                                     </div>
-                                    <!-- <h4>1</h4> -->
                                     <p class="p-info">Skyline is engaged in securing growth and revenue from industry sectors characterized by new and rapidly changing technology. Advanced technology has come to be utilized in so many different industries that members of the business community now often regard it as its own unique industry subset, with applications across the spectrum of the world of commerce.</p>
-                                    <p class="p-info">Successful high-tech firms are adept at recognizing the possibilities associated with technological advancements, and nurture corporate cultures that enable them to seize on those opportunities. We utilize education and training opportunities. Entrepreneurial programs have proliferated across the country in recent years, and many of these feature a heavy emphasis on technology.</p>
+                                    <p class="p-info" style="margin-bottom: 5rem">Successful high-tech firms are adept at recognizing the possibilities associated with technological advancements, and nurture corporate cultures that enable them to seize on those opportunities. We utilize education and training opportunities. Entrepreneurial programs have proliferated across the country in recent years, and many of these feature a heavy emphasis on technology.</p>
                                 </div>
                             </div>
                         </div>
-                        <!-- <div class="col-xl-4">
-                            <div class="info-section">
-                                <div class="info-box">
-                                    <h4>2</h4>
-                                    <p class="p-info">1</p>
-                                    <p class="p-info">2</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-4">
-                            <div class="info-section">
-                                <div class="info-box">
-                                    <h4>3</h4>
-                                    <p class="p-info">1</p>
-                                    <p class="p-info">2</p>
-                                    <a href="#">3</a>
-                                </div>
-                            </div>
-                        </div> -->
                     </div>
                 </div>
                 <div class="col-md-12 nopadding black blueborder">
@@ -103,12 +78,12 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="flex column vertical">
-                                <h3 class="flex margin2 h1-services grayborder" id="products">Products</h3>
+                                <h3 class="flex margin2 h1-services grayborder" id="products" style="margin-top: 5rem;">Products</h3>
                             </div>
                         </div>
                     </div>
                 </div>
-                <!--Auto parts-->
+                <!-- Products -->
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-4">
@@ -149,12 +124,11 @@
             </div>
             <div>
             </div>
-
         </main>  
         <div class="form-padding">
             <div class="col-md-12 nopadding black blueborder">
             </div>
-            <!--Contact Form-->
+            <!-- Contact -->
             <div class="container">
                 <div class="row vertical">
                     <div class="col-md-6 order-md-1 order-2">
@@ -201,21 +175,14 @@
                 </div>
             </div>
         </div>
-
-         <!--Footer links-->
-        <div class="footer-wrapper-xl flex column darkblue">
-            <!--Footer material icons-->
+        <!-- Footer -->
+        <div class="footer-wrapper-xl flex column darkblue" style="height: 100px;">
             <footer class="flex padding darkblue space-around">
                 <span class="material-icons bottom-icon margin05" style="color: white;">facebook</span>
                 <span class="material-icons bottom-icon margin05" style="color: white;">email</span>
                 <span class="material-icons bottom-icon margin05" style="color: white;">phone</span>
-                <!-- <span class="Rspan" style="color: red;">|</span> -->
-                <!-- <span class="Rspan" style="color: red;">|</span> -->
-                <!-- <span class="material-icons bottom-icon" style="color: white;">print</span> -->
             </footer>
         </div>
-        
-        <!--Copyright-->
         <div class="flex horizontal column padding darkblue">
             <span class="copyright">© 2021 Skyline</span>
         </div>
